// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyResults > should render with custom title and subtitle 1`] = `
<DocumentFragment>
  <div
    class="bg-theme-background flex h-full flex-col justify-center text-center"
    data-testid="EmptyResults"
  >
    <div>
      <div
        class="dim:text-theme-dim-200 mb-4 text-lg font-bold"
      >
        No results
      </div>
      <div
        class="text-md dim:text-theme-dim-500 mb-8"
      >
        No results found. Refine your search and try again.
      </div>
      <div
        class="mx-auto w-full max-w-lg"
      >
        <svg
          fill="none"
          viewBox="0 0 385 136"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#clip0_8144_152415)"
          >
            <path
              d="M278 135.523v-19h-3v-2h3v-4h2v4h38v-1h2v1h38v-38h-22v-2h22v-23h2v23h2v2h-2v38h16v2h-16v6h-2v-6h-38v10h-2v-10h-38v19h-2zm-256-44v-23h-2v-2h2v-38H6v-2h16v-6h2v6h38v-10h2v10h38v-19h2v19h3v2h-3v4h-2v-4H64v23h-2v-23H24v38h22v2H24v23h-2zm99-59v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2zm-117 40v-4H0v-2h4v-4h2v4h4v2H6v4H4zm354-31v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2zm21 39v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2z"
              fill="#DBDEE5"
            />
            <path
              d="M59 109.538v-44.3a4.01 4.01 0 0 1 8 0v34.6"
              stroke="#DBDEE5"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M51 87.522V73.908a2.5 2.5 0 0 1 4.985 0v13.614"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M59.007 93.53a2.851 2.851 0 0 1-3.016-2.962v-4.056m2.999 14.02A8.038 8.038 0 0 1 51 92.444v-8.913m24 8.993v-7.562a2.494 2.494 0 1 0-4.988 0v7.562"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M67 98.605a2.865 2.865 0 0 0 3.011-2.993v-4.1m-3.027 13.026a8.05 8.05 0 0 0 8.014-8.09V87.53M49 111.512h27m-11 .011v-5"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M167 109.538v-44.3a4.01 4.01 0 0 1 8 0v34.6"
              stroke="#DBDEE5"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M159 87.522V73.908a2.498 2.498 0 0 1 2.492-2.306 2.499 2.499 0 0 1 2.493 2.306v13.614"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M167.007 93.53a2.853 2.853 0 0 1-3.016-2.962v-4.056m2.998 14.02A8.036 8.036 0 0 1 159 92.444v-8.913m23.999 8.993v-7.562a2.493 2.493 0 1 0-4.987 0v7.562M175 98.537a2.834 2.834 0 0 0 2.149-.822 2.842 2.842 0 0 0 .834-2.144v-4.06"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M174.984 104.538a8.05 8.05 0 0 0 8.014-8.09V87.53M157 111.512h27m-9 .011v-5"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M186 111.523h137"
              stroke="#212225"
              stroke-width="2"
            />
            <path
              d="M98 111.523h78m-106 0h18m48-.5a9.503 9.503 0 0 1 9.5-9.5h4a9.5 9.5 0 0 1 9.5 9.5m-51.999-.5a4.787 4.787 0 0 1 4.543-5h1.913a4.789 4.789 0 0 1 4.544 5"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M155.016 103.523h5.662c3.491 0 6.321 3.134 6.321 7"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M232.383 106.085a9.493 9.493 0 0 1 8.117-4.562h4a9.498 9.498 0 0 1 9.5 9.5"
              stroke="#212225"
              stroke-width="2"
            />
            <path
              d="M224.001 111.523a5.897 5.897 0 0 1 5.783-6h2.435a5.893 5.893 0 0 1 5.782 6"
              stroke="#212225"
              stroke-width="2"
            />
            <path
              d="M76 106.523a27 27 0 0 1 27-27c14.912 0 27 10.088 27 25"
              stroke="#235B95"
              stroke-dasharray="8 4"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M129.863 100.815a100.066 100.066 0 0 1 49.992-86.052 100.062 100.062 0 0 1 99.519-.353"
              stroke="#235B95"
              stroke-dasharray="8 4"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M129.992 100.489c.024-3.642.283-7.279.776-10.887 6.294-46.179 49.087-78.546 95.579-72.294"
              stroke="#235B95"
              stroke-dasharray="8 4"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M241.15 83.274C235.819 77.201 231 67.741 231 59.025a34.498 34.498 0 0 1 24.196-32.93 34.5 34.5 0 0 1 38.652 13.261m-54.006 42.259C228.225 73.542 225 64.2 225 53.023m6.069 9.037a37.104 37.104 0 0 1 3.167-26.54m12.979-5.977a33.124 33.124 0 0 1 23.347-9.5m10.628 15.702c-3.577-2.282-5.2-7.4-11.545-10.89"
              stroke="#212225"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M303.172 55.875a34.62 34.62 0 0 1-5.666 26.831 34.608 34.608 0 0 1-37.378 13.41 34.608 34.608 0 0 1-21.431-17.11 34.612 34.612 0 0 1-3.951-13.431m67.599-13.954c3.985 9.614 4.277 25.473-1.337 35.2m-.733-8.657a33.346 33.346 0 0 1-15.22 20.234m-14.753-.915a33.16 33.16 0 0 1-25.036-3.436"
              stroke="#212225"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M241.449 72.644c1.277 2.463.534 4.912 1.233 8.78.289 1.594 2.827 5.225 2.977 6.614m-2.983-55.093a34.615 34.615 0 0 1 59.95 25.298 34.606 34.606 0 0 1-12.14 24.602m-47.474-49.942a34.622 34.622 0 0 1 26.054-16.255m-2 4.518a33.342 33.342 0 0 1 25.313.551m3.269 13.646A33.159 33.159 0 0 1 307.469 57.7m-12.153 11.58c1.925-3.8 4.951-.487 7.641-10.8"
              stroke="#212225"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M286.01 77.951A24.573 24.573 0 0 1 243.446 60a24.568 24.568 0 0 1 8.615-17.468m33.71 35.452a24.59 24.59 0 0 1-18.501 11.54m-2.129-3.918c-5.677 2.108-8.263 1.969-13.715-.391m-3.032-8.978A23.535 23.535 0 0 1 240 60.383m10.761-11.059c-1.367 2.694-4.351 1.766-7.034 8.352"
              stroke="#212225"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M284.646 38.516a20.451 20.451 0 0 1 6.205 12.84A20.2 20.2 0 0 1 273.082 73.6a19.598 19.598 0 0 1-17.074-7.04m28.664-27.85a20.374 20.374 0 0 1 9.329 15.284m-3.058-2.517a21.98 21.98 0 0 1-.427 15.609m-7.257 2.5a18.9 18.9 0 0 1-12.818 6.935m-8.941-8.888c2.178 1.129 2.844 4.1 11.1 5.85"
              stroke="#212225"
              stroke-linecap="round"
              stroke-width="2"
            />
          </g>
          <defs>
            <clippath
              id="clip0_8144_152415"
            >
              <path
                d="M0 0h385v135.203H0z"
                fill="#fff"
                transform="translate(0 .32)"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyResults > should render with no texts 1`] = `
<DocumentFragment>
  <div
    class="bg-theme-background flex h-full flex-col justify-center text-center"
    data-testid="EmptyResults"
  >
    <div>
      <div
        class="mx-auto w-full max-w-lg"
      >
        <svg
          fill="none"
          viewBox="0 0 385 136"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#clip0_8144_152415)"
          >
            <path
              d="M278 135.523v-19h-3v-2h3v-4h2v4h38v-1h2v1h38v-38h-22v-2h22v-23h2v23h2v2h-2v38h16v2h-16v6h-2v-6h-38v10h-2v-10h-38v19h-2zm-256-44v-23h-2v-2h2v-38H6v-2h16v-6h2v6h38v-10h2v10h38v-19h2v19h3v2h-3v4h-2v-4H64v23h-2v-23H24v38h22v2H24v23h-2zm99-59v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2zm-117 40v-4H0v-2h4v-4h2v4h4v2H6v4H4zm354-31v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2zm21 39v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2z"
              fill="#DBDEE5"
            />
            <path
              d="M59 109.538v-44.3a4.01 4.01 0 0 1 8 0v34.6"
              stroke="#DBDEE5"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M51 87.522V73.908a2.5 2.5 0 0 1 4.985 0v13.614"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M59.007 93.53a2.851 2.851 0 0 1-3.016-2.962v-4.056m2.999 14.02A8.038 8.038 0 0 1 51 92.444v-8.913m24 8.993v-7.562a2.494 2.494 0 1 0-4.988 0v7.562"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M67 98.605a2.865 2.865 0 0 0 3.011-2.993v-4.1m-3.027 13.026a8.05 8.05 0 0 0 8.014-8.09V87.53M49 111.512h27m-11 .011v-5"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M167 109.538v-44.3a4.01 4.01 0 0 1 8 0v34.6"
              stroke="#DBDEE5"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M159 87.522V73.908a2.498 2.498 0 0 1 2.492-2.306 2.499 2.499 0 0 1 2.493 2.306v13.614"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M167.007 93.53a2.853 2.853 0 0 1-3.016-2.962v-4.056m2.998 14.02A8.036 8.036 0 0 1 159 92.444v-8.913m23.999 8.993v-7.562a2.493 2.493 0 1 0-4.987 0v7.562M175 98.537a2.834 2.834 0 0 0 2.149-.822 2.842 2.842 0 0 0 .834-2.144v-4.06"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M174.984 104.538a8.05 8.05 0 0 0 8.014-8.09V87.53M157 111.512h27m-9 .011v-5"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M186 111.523h137"
              stroke="#212225"
              stroke-width="2"
            />
            <path
              d="M98 111.523h78m-106 0h18m48-.5a9.503 9.503 0 0 1 9.5-9.5h4a9.5 9.5 0 0 1 9.5 9.5m-51.999-.5a4.787 4.787 0 0 1 4.543-5h1.913a4.789 4.789 0 0 1 4.544 5"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M155.016 103.523h5.662c3.491 0 6.321 3.134 6.321 7"
              stroke="#DBDEE5"
              stroke-width="2"
            />
            <path
              d="M232.383 106.085a9.493 9.493 0 0 1 8.117-4.562h4a9.498 9.498 0 0 1 9.5 9.5"
              stroke="#212225"
              stroke-width="2"
            />
            <path
              d="M224.001 111.523a5.897 5.897 0 0 1 5.783-6h2.435a5.893 5.893 0 0 1 5.782 6"
              stroke="#212225"
              stroke-width="2"
            />
            <path
              d="M76 106.523a27 27 0 0 1 27-27c14.912 0 27 10.088 27 25"
              stroke="#235B95"
              stroke-dasharray="8 4"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M129.863 100.815a100.066 100.066 0 0 1 49.992-86.052 100.062 100.062 0 0 1 99.519-.353"
              stroke="#235B95"
              stroke-dasharray="8 4"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M129.992 100.489c.024-3.642.283-7.279.776-10.887 6.294-46.179 49.087-78.546 95.579-72.294"
              stroke="#235B95"
              stroke-dasharray="8 4"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M241.15 83.274C235.819 77.201 231 67.741 231 59.025a34.498 34.498 0 0 1 24.196-32.93 34.5 34.5 0 0 1 38.652 13.261m-54.006 42.259C228.225 73.542 225 64.2 225 53.023m6.069 9.037a37.104 37.104 0 0 1 3.167-26.54m12.979-5.977a33.124 33.124 0 0 1 23.347-9.5m10.628 15.702c-3.577-2.282-5.2-7.4-11.545-10.89"
              stroke="#212225"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M303.172 55.875a34.62 34.62 0 0 1-5.666 26.831 34.608 34.608 0 0 1-37.378 13.41 34.608 34.608 0 0 1-21.431-17.11 34.612 34.612 0 0 1-3.951-13.431m67.599-13.954c3.985 9.614 4.277 25.473-1.337 35.2m-.733-8.657a33.346 33.346 0 0 1-15.22 20.234m-14.753-.915a33.16 33.16 0 0 1-25.036-3.436"
              stroke="#212225"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M241.449 72.644c1.277 2.463.534 4.912 1.233 8.78.289 1.594 2.827 5.225 2.977 6.614m-2.983-55.093a34.615 34.615 0 0 1 59.95 25.298 34.606 34.606 0 0 1-12.14 24.602m-47.474-49.942a34.622 34.622 0 0 1 26.054-16.255m-2 4.518a33.342 33.342 0 0 1 25.313.551m3.269 13.646A33.159 33.159 0 0 1 307.469 57.7m-12.153 11.58c1.925-3.8 4.951-.487 7.641-10.8"
              stroke="#212225"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M286.01 77.951A24.573 24.573 0 0 1 243.446 60a24.568 24.568 0 0 1 8.615-17.468m33.71 35.452a24.59 24.59 0 0 1-18.501 11.54m-2.129-3.918c-5.677 2.108-8.263 1.969-13.715-.391m-3.032-8.978A23.535 23.535 0 0 1 240 60.383m10.761-11.059c-1.367 2.694-4.351 1.766-7.034 8.352"
              stroke="#212225"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M284.646 38.516a20.451 20.451 0 0 1 6.205 12.84A20.2 20.2 0 0 1 273.082 73.6a19.598 19.598 0 0 1-17.074-7.04m28.664-27.85a20.374 20.374 0 0 1 9.329 15.284m-3.058-2.517a21.98 21.98 0 0 1-.427 15.609m-7.257 2.5a18.9 18.9 0 0 1-12.818 6.935m-8.941-8.888c2.178 1.129 2.844 4.1 11.1 5.85"
              stroke="#212225"
              stroke-linecap="round"
              stroke-width="2"
            />
          </g>
          <defs>
            <clippath
              id="clip0_8144_152415"
            >
              <path
                d="M0 0h385v135.203H0z"
                fill="#fff"
                transform="translate(0 .32)"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
